# classic_computer_science_problems_in_java

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  default.nix  gazelle.yaml
src/main/chapter1/compresed-gene/: BUILD.bazel
src/main/java/chapter1/: BUILD.bazel  Fib1.java  Fib2.java  KeyPair.java
src/main/java/chapter1/compresed-gene/: BUILD.bazel
src/main/java/chapter2/: BUILD.bazel  GenericSearch.java  Maze.java
src/main/java/chapter3/: BUILD.bazel  CSP.java  Constraint.java  QueensConstraint.java  SendMoreMoneyConstraint.java  WordGrid.java  WordSearchConstraint.java
src/main/java/com/example/: Example.java
